redirect to namesdaoranking.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content"2;namesdaoranking.html">
+    <meta http-equiv="refresh" content";https://htmlpreview.github.io/?https://github.com/DrakoPensulo/Test/blob/master/namesdaoranking.html">
     <title>namesdao ranking index.html</title>
    </head>
   <body>
