--- a/namesdaoranking.html
+++ b/namesdaoranking.html
@@ -6,7 +6,8 @@
    </head>
   <body>
     <p>
-      <a href="https://htmlpreview.github.io/?https://github.com/DrakoPensulo/Test/blob/master/index.html">namesdao ranking</a>    
+      <a href="https://htmlpreview.github.io/?https://github.com/DrakoPensulo/Test/blob/master/index.html">namesdao ranking</a>
+      <a href="index.html">test link</a>
     </p>
   </body>
 </html>
