--- a/namesdaoranking.html
+++ b/namesdaoranking.html
@@ -7,7 +7,10 @@
   <body>
     <p>
       <a href="https://htmlpreview.github.io/?https://github.com/DrakoPensulo/Test/blob/master/index.html">namesdao ranking</a>
-      <a href="index.html">test link</a>
+      <a href="index.html">direct link</a>
+    </p>
+    <p>
+      <a href="readme.md"><short description of the method</a>
     </p>
   </body>
 </html>
