--- a/namesdaoranking.html
+++ b/namesdaoranking.html
@@ -10,7 +10,7 @@
       <a href="index.html">direct link</a>
     </p>
     <p>
-      <a href="readme.md">short description of the method</a>
+      <a href="README.md">short description of the method</a>
     </p>
   </body>
 </html>
